--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
+                    <source>17</source>
                     <release>17</release>
                 </configuration>
             </plugin>
