--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,11 +81,11 @@ jobs:
       - name: Install yt-downloader in local Maven repo
         run: |
           mvn install:install-file `
-          -Dfile=lib/yt-downloader-1.0.0.jar `
-          -DgroupId=com.tonyguerra.ytdownloader `
-          -DartifactId=yt-downloader `
-          -Dversion=1.0.0 `
-          -Dpackaging=jar
+            "-Dfile=lib/yt-downloader-1.0.0.jar" `
+            "-DgroupId=com.tonyguerra.ytdownloader" `
+            "-DartifactId=yt-downloader" `
+            "-Dversion=1.0.0" `
+            "-Dpackaging=jar"
 
       - name: Build JAR
         run: mvn clean package
