--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,6 +104,12 @@ jobs:
           --icon src/main/resources/com/tonyguerra/ytplayer/favicon.ico `
           --win-menu
 
+      - name: Rename MSI
+        run: |
+          $msiFile = Get-ChildItem -Path . -Filter "*.msi" | Select-Object -First 1
+          $newName = "YTPlayer.msi"
+          Rename-Item -Path $msiFile.FullName -NewName $newName
+
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
         with:
