--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Extract Version from pom.xml
+        id: extract-version
+        run: |
+          $version = mvn help:evaluate -Dexpression=project.version -q -DforceStdout
+          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+            
       - name: Install yt-downloader in local Maven repo
         run: |
           mvn install:install-file `
