--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,16 +87,15 @@ jobs:
       - name: Extract Version from pom.xml
         shell: pwsh
         run: |
-          try {
-            $version = mvn help:evaluate -Dexpression=project.version -q -DforceStdout
-            if (-not $version) {
-              throw "Version not found"
-            }
-            "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          } catch {
-            Write-Error "Failed to extract version: $_"
+          $version = & mvn help:evaluate -Dexpression=project.version -q -DforceStdout
+          Write-Host "Resolved version: $version"
+                
+          if ([string]::IsNullOrWhiteSpace($version)) {
+            Write-Error "Failed to extract version"
             exit 1
           }
+            
+          "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
             
       - name: Install yt-downloader in local Maven repo
         run: |
