--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <javafx.version>21.0.1</javafx.version>
+        <javafx.version>21</javafx.version>
         <javafx.platform>${os.detected.classifier}</javafx.platform>
         <jpackage.type>app-image</jpackage.type>
     </properties>
 
     <dependencies>
-        <!-- yt-downloader JAR local -->
-        <dependency>
-            <groupId>com.tonyguerra.ytdownloader</groupId>
-            <artifactId>yt-downloader</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
         <!-- JavaFX com classifier detectado -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -37,6 +30,19 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- JavaFX WebView-->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <!-- Jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.19.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -120,7 +126,8 @@
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.tonyguerra.ytplayer.Main</mainClass>
                                 </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.tonyguerra.ytplayer.Main</mainClass>
                                     <manifestEntries>
                                         <Implementation-Version>${project.version}</Implementation-Version>
