--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,32 +54,58 @@ jobs:
             *.rpm
 
   build-arch:
-    name: Build Arch package
-    runs-on: ubuntu-latest
-    container: archlinux:base-devel
-    steps:
-      - name: Setup base
-        run: |
-          pacman -Syu --noconfirm git maven jdk-openjdk
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Sync version into PKGBUILD/launcher
-        run: |
-          VERSION=$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version)
-          sed -i "s/pkgver=.*/pkgver=${VERSION}/" arch/PKGBUILD
-          sed -i "s/@VERSION@/${VERSION}/g" arch/yt-player.launcher || true
-      - name: Build pkg.tar.zst
-        working-directory: arch
-        run: |
-          makepkg -sfc --noconfirm
-          ls -l *.pkg.tar.zst
-      - name: Upload Arch Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: arch-package
-          path: arch/*.pkg.tar.zst
+  name: Build Arch package
+  runs-on: ubuntu-latest
+  container: archlinux:base-devel
+
+  steps:
+    - name: Setup base system
+      run: |
+        pacman -Syu --noconfirm
+        pacman -S --noconfirm --needed git sudo jdk-openjdk maven base-devel
+
+        # cria usuário não-root para o makepkg
+        useradd -m builder
+        echo 'builder ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/builder
+
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Prepare workspace for builder
+      env:
+        GITHUB_WORKSPACE: ${{ github.workspace }}
+      run: |
+        chown -R builder:builder "$GITHUB_WORKSPACE"
+        # evita "unsafe repository" para o usuário novo
+        sudo -u builder git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        # garantir finais de linha LF (evita BOM/CRLF em scripts)
+        sudo -u builder git config --global core.autocrlf false
+        sudo -u builder git config --global core.eol lf
+
+    - name: Sync version into PKGBUILD/launcher (opcional)
+      env:
+        GITHUB_WORKSPACE: ${{ github.workspace }}
+      run: |
+        # como o build() do PKGBUILD usa mvn, esta etapa é opcional.
+        # Se quiser injetar a versão no PKGBUILD/launcher:
+        VERSION=$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version || true)
+        if [[ -n "$VERSION" && "$VERSION" != *"<"* ]]; then
+          sed -i "s/pkgver=.*/pkgver=${VERSION}/" arch/PKGBUILD || true
+          sed -i "s/@VERSION@/${VERSION}/g" arch/yt-player.launcher 2>/dev/null || true
+        fi
+        chown -R builder:builder "$GITHUB_WORKSPACE"
+
+    - name: Build pkg.tar.zst (makepkg como usuário normal)
+      working-directory: arch
+      run: |
+        sudo -u builder bash -lc 'makepkg -sfc --noconfirm'
+        ls -l *.pkg.tar.zst
+
+    - name: Upload Arch Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: arch-package
+        path: arch/*.pkg.tar.zst
 
   build-windows:
     name: Build for Windows
